[FIX] Overflow hidden for product card imges

--- a/style.css
+++ b/style.css
@@ -273,6 +273,7 @@ a {
   padding: 20px;
   text-decoration: none;
   margin-bottom: 20px;
+  overflow: hidden;
 }
 
 .product__img img {
